--- a/apparel.html
+++ b/apparel.html
@@ -3,13 +3,13 @@
 
 <head>
     <div class="container">
-        <img src="./images/header002.png" alt="grind banner" style="width:100%;">
+        <img src="images/header002.png" alt="grind banner" style="width:100%;">
     </div> 
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Find Us</title>
-        <link rel="icon" type="image/x-icon" href="./images/favi.png">
-        <link rel="stylesheet" href="./webstyle.css">
+        <link rel="icon" type="image/x-icon" href="images/favi.png">
+        <link rel="stylesheet" href="webstyle.css">
 </head>
 
 <body>
@@ -36,7 +36,7 @@
         <br>
     </div>
     <div>
-      <img class="comingsoon" src="./images/comingsoon.png"> </a>
+      <img class="comingsoon" src="images/comingsoon.png"> </a>
     </div>
 <br>
 <br>
