--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
     <div class="container">
-        <img src="./images/header002.png" alt="grind banner" style="width:100%;">
+        <img src="images/header002.png" alt="grind banner" style="width:100%;">
     </div> 
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>The Grind</title>
-        <link rel="icon" type="image/x-icon" href="./images/favi.png">
-        <link rel="stylesheet" href="./webstyle.css">
+        <link rel="icon" type="image/x-icon" href="images/favi.png">
+        <link rel="stylesheet" href="webstyle.css">
 </head>
 
 <body>
@@ -37,7 +37,7 @@
     </div>
  <br>
     <div>
-        <img id="grindlogo01" src="./images/grindlogo01.png" alt="the grind logo">
+        <img id="grindlogo01" src="images/grindlogo01.png" alt="the grind logo">
     </div>
 
     <div>
@@ -50,7 +50,7 @@
 <br>
 <br>
     <div>
-        <img id="cb05" src="./images/cb05.png"> </a>
+        <img id="cb05" src="images/cb05.png"> </a>
         <h1>Our Blends</h1>
         <br>
         <h2>Our roasters have over 22 years' experience in producing fantastic coffee beans. With such a wide menu to choose from, there's always something new to discover, like our freshly roasted beans or pre-ground coffee. Take a look at what is on offer today.</h2>
@@ -59,7 +59,7 @@
 <br>
 <br>
     <div>
-        <img id="cb03" src="./images/cb03.png"> </a>
+        <img id="cb03" src="images/cb03.png"> </a>
         <h1><u>Rise & Grind</u></h1>
         <br>
         <h2>Rise and Grind with our strong Turbo blend. Its bold, rich texture and earthy flavours are ideal for getting you out of bed in the morning, and the generous measure of caffeine will keep you going as you start the day. Try this as an intense, powerful espresso when you're in a hurry and about to leave the house.</h2>
@@ -71,7 +71,7 @@
 <br>
 <br>
     <div>
-        <img id="cb04" src="./images/cb04.png"> </a>
+        <img id="cb04" src="images/cb04.png"> </a>
         <h1><u>Kopi Jawa</u></h1>
         <br>
         <h2>A wonderful blend of Indonesian Java and Brazilian Santos creates a wonderfully strong coffee that's full of flavour, but without any bitterness. Java, or Kopi Jawa as Indonesians refer to it, is typically a strong, slightly sweet coffee, and it works wonders here with the light body and low acidity of Santos. The balance of flavours creates an indulgent blend that's best enjoyed as an espresso, but can also be used in a cafetiere or as a base for your favourite filter coffees.
@@ -82,7 +82,7 @@
 <br>
 <br>    
     <div>
-        <img id="cb01" src="./images/cb01.png"> </a>
+        <img id="cb01" src="images/cb01.png"> </a>
         <h1><u>Arabica Spice</u></h1>
         <br>
         <h2>An extraordinary, complex blend of 100% Arabica beans from five different coffee-growing locations across the world, puts Arabica Supreme high on the list of the finest blends to be created. Deep, rich and smooth, with an exotic, spicy aroma, the recipe for this ingenious mix of high quality, expertly roasted beans is a well-kept secret, but once tried, you’ll be left in no doubt as to how amazing it tastes. 
@@ -94,7 +94,7 @@
 <br>
             
     <div>
-        <img id="cb02" src="./images/cb02.png"> </a>
+        <img id="cb02" src="images/cb02.png"> </a>
         <h1><u>Dark Nights</u></h1>
         <br>
         <h2>Dark Nights is a gorgeous combination of monsoon washed and Ling Tong Sumatran beans hits you immediately with its velvety sweetness, rich fruit flavours and smokey spiciness. Leaving behind an earthly and complex taste that is fantastic for a more savoury coffee, our Dark Nights is best enjoyed in the evening or after a meal, and compliments a dessert well.</h2>
