--- a/stickers.html
+++ b/stickers.html
@@ -3,13 +3,13 @@
 
 <head>
     <div class="container">
-        <img src="./images/header002.png" alt="grind banner" style="width:100%;">
+        <img src="images/header002.png" alt="grind banner" style="width:100%;">
     </div> 
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Find Us</title>
-        <link rel="icon" type="image/x-icon" href="./images/favi.png">
-        <link rel="stylesheet" href="./webstyle.css">
+        <link rel="icon" type="image/x-icon" href="images/favi.png">
+        <link rel="stylesheet" href="webstyle.css">
 </head>
 
 <body>
@@ -37,9 +37,9 @@
     </div>
 
     <div>
-      <img class="stickerrow" src="./stickers/adulting.png"> </a>
-      <img class="stickerrow" src="./stickers/sorry.png"> </a>
-      <img class="stickerrow" src="./stickers/need.png"> </a>
+      <img class="stickerrow" src="stickers/adulting.png"> </a>
+      <img class="stickerrow" src="stickers/sorry.png"> </a>
+      <img class="stickerrow" src="stickers/need.png"> </a>
     </div>
 
     <div class="button">
@@ -53,9 +53,9 @@
 </div>
 
     <div>
-      <img class="stickerrow" src="./stickers/better.png"> </a>
-      <img class="stickerrow" src="./stickers/chapter.png"> </a>
-      <img class="stickerrow" src="./stickers/distracted.png"> </a>
+      <img class="stickerrow" src="stickers/better.png"> </a>
+      <img class="stickerrow" src="stickers/chapter.png"> </a>
+      <img class="stickerrow" src="stickers/distracted.png"> </a>
     </div>
     <div class="button">
       <button>Add To Cart</button>
@@ -67,9 +67,9 @@
 <button>Add To Cart</button>
 </div>
     <div>
-      <img class="stickerrow" src="./stickers/game01.png"> </a>
-      <img class="stickerrow" src="./stickers/game02.png"> </a>
-      <img class="stickerrow" src="./stickers/game03.png"> </a>
+      <img class="stickerrow" src="stickers/game01.png"> </a>
+      <img class="stickerrow" src="stickers/game02.png"> </a>
+      <img class="stickerrow" src="stickers/game03.png"> </a>
     </div>
     <div class="button">
       <button>Add To Cart</button>
@@ -81,9 +81,9 @@
 <button>Add To Cart</button>
 </div>
     <div>
-      <img class="stickerrow" src="./stickers/ramen.png"> </a>
-      <img class="stickerrow" src="./stickers/dumpling.png"> </a>
-      <img class="stickerrow" src="./stickers/takeaway.png"> </a>
+      <img class="stickerrow" src="stickers/ramen.png"> </a>
+      <img class="stickerrow" src="stickers/dumpling.png"> </a>
+      <img class="stickerrow" src="stickers/takeaway.png"> </a>
     </div>
     <div class="button">
       <button>Add To Cart</button>
