--- a/tumblers.html
+++ b/tumblers.html
@@ -3,13 +3,13 @@
 
 <head>
     <div class="container">
-        <img src="./images/header002.png" alt="grind banner" style="width:100%;">
+        <img src="images/header002.png" alt="grind banner" style="width:100%;">
     </div> 
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Find Us</title>
-        <link rel="icon" type="image/x-icon" href="./images/favi.png">
-        <link rel="stylesheet" href="./webstyle.css">
+        <link rel="icon" type="image/x-icon" href="images/favi.png">
+        <link rel="stylesheet" href="webstyle.css">
 </head>
 
 <body>
@@ -39,9 +39,9 @@
     <br>
 <br>
 <div>
-  <img class="tumblers" src="./tumbler/AOP-01.png"> </a>
-  <img class="tumblers" src="./tumbler/SDS-22.png"> </a>
-  <img class="tumblers" src="./tumbler/DSA-23.png"> </a>
+  <img class="tumblers" src="tumbler/AOP-01.png"> </a>
+  <img class="tumblers" src="tumbler/SDS-22.png"> </a>
+  <img class="tumblers" src="tumbler/DSA-23.png"> </a>
 </div>
 
 <div class="button">
@@ -55,9 +55,9 @@
 </div>
 
 <div>
-  <img class="tumblers" src="./tumbler/SGAB-09.png"> </a>
-  <img class="tumblers" src="./tumbler/SGAT-07.png"> </a>
-  <img class="tumblers" src="./tumbler/SGBTF-013.png"> </a>
+  <img class="tumblers" src="tumbler/SGAB-09.png"> </a>
+  <img class="tumblers" src="tumbler/SGAT-07.png"> </a>
+  <img class="tumblers" src="tumbler/SGBTF-013.png"> </a>
 </div>
 <div class="button">
   <button>Add To Cart</button>
@@ -69,9 +69,9 @@
 <button>Add To Cart</button>
 </div>
 <div>
-  <img class="tumblers" src="./tumbler/BHCP-03.png"> </a>
-  <img class="tumblers" src="./tumbler/CRYFP-12-03.png"> </a>
-  <img class="tumblers" src="./tumbler/LBTFT-14.png"> </a>
+  <img class="tumblers" src="tumbler/BHCP-03.png"> </a>
+  <img class="tumblers" src="tumbler/CRYFP-12-03.png"> </a>
+  <img class="tumblers" src="tumbler/LBTFT-14.png"> </a>
 </div>
 <div class="button">
   <button>Add To Cart</button>
