--- a/about.html
+++ b/about.html
@@ -3,13 +3,13 @@
 
 <head>
     <div class="container">
-        <img src="./images/header002.png" alt="grind banner" style="width:100%;">
+        <img src="images/header002.png" alt="grind banner" style="width:100%;">
     </div> 
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Find Us</title>
-        <link rel="icon" type="image/x-icon" href="./images/favi.png">
-        <link rel="stylesheet" href="./webstyle.css">
+        <link rel="icon" type="image/x-icon" href="images/favi.png">
+        <link rel="stylesheet" href="webstyle.css">
 </head>
 
 <body>
@@ -37,8 +37,8 @@
     </div>
 <br>
      <div>
-        <img id="grindlogo01" src="./images/grindlogo01.png" alt="the grind logo">
-        <img id="map" src="./images/map.png" alt="logo_1">
+        <img id="grindlogo01" src="images/grindlogo01.png" alt="the grind logo">
+        <img id="map" src="images/map.png" alt="logo_1">
     </div>
 
      <div>
