--- a/beverages.html
+++ b/beverages.html
@@ -3,13 +3,13 @@
     
 <head>
     <div class="container">
-        <img src="./images/header002.png" alt="grind banner" style="width:100%;">
+        <img src="images/header002.png" alt="grind banner" style="width:100%;">
     </div> 
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Beverages</title>
-        <link rel="icon" type="image/x-icon" href="./images/favi.png">
-        <link rel="stylesheet" href="./webstyle.css">
+        <link rel="icon" type="image/x-icon" href="images/favi.png">
+        <link rel="stylesheet" href="webstyle.css">
 </head>
 
 <body>
@@ -37,7 +37,7 @@
     </div>
 <br>
     <div class="sticker-row">
-        <img id="drinkmenu" src="./images/drinkmenu.png"> </a>
+        <img id="drinkmenu" src="images/drinkmenu.png"> </a>
     </div>
 <br>
      <div class="footer">
