--- a/foodmenu.html
+++ b/foodmenu.html
@@ -3,13 +3,13 @@
 
 <head>
     <div class="container">
-        <img src="./images/header002.png" alt="grind banner" style="width:100%;">
+        <img src="images/header002.png" alt="grind banner" style="width:100%;">
     </div> 
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Food Menu</title>
-        <link rel="icon" type="image/x-icon" href="./images/favi.png">
-        <link rel="stylesheet" href="./webstyle.css">
+        <link rel="icon" type="image/x-icon" href="images/favi.png">
+        <link rel="stylesheet" href="webstyle.css">
 </head>
 
 <body>
@@ -38,7 +38,7 @@
 <br>
 
     <div class="sticker-row">
-        <img id="foodmenu" src="./images/foodmenu.png"> </a>
+        <img id="foodmenu" src="images/foodmenu.png"> </a>
     </div>
     
     <div class="footer">
