--- a/merchandise.html
+++ b/merchandise.html
@@ -3,13 +3,13 @@
 
 <head>
     <div class="container">
-        <img src="./images/header002.png" alt="grind banner" style="width:100%;">
+        <img src="images/header002.png" alt="grind banner" style="width:100%;">
     </div> 
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Merchandise</title>
-        <link rel="icon" type="image/x-icon" href="./images/favi.png">
-        <link rel="stylesheet" href="./webstyle.css">
+        <link rel="icon" type="image/x-icon" href="images/favi.png">
+        <link rel="stylesheet" href="webstyle.css">
 </head>
 
 <body>
@@ -36,9 +36,9 @@
     </div>
 <br>
     <div class="sticker-row">
-        <a href="#"> <img id="bfcsticker" src="./images/bfc_sticker.png"> </a>
-        <a href="#"> <img id="tumbler" src="./images/tumblers.png"> </a>
-        <a href="#"> <img id="comingsoon" src="./images/comingsoon.png"> </a>
+        <a href="#"> <img id="bfcsticker" src="images/bfc_sticker.png"> </a>
+        <a href="#"> <img id="tumbler" src="images/tumblers.png"> </a>
+        <a href="#"> <img id="comingsoon" src="images/comingsoon.png"> </a>
     </div>
 
     <div class="footer">
